--- a/resources/scss/modules/sidebar.scss
+++ b/resources/scss/modules/sidebar.scss
@@ -1,3 +1,17 @@
 .sidebar {
-  min-width: 30vw;
+  min-width: 20vw;
+}
+
+.subgroup {
+  margin-left: 14px;
+  font-size: 14px;
+  a {
+    color: #4a5568!important;
+
+  }
+}
+
+.badge {
+  color: #4a5568;
+  font-size: inherit;
 }
